# polykin-web

./: README.md  pyproject.toml
src/: 1_Home.py  utils.py
src/pages/: 2_Estimate_copolymerization_ratios_v2.py  2_Estimate_reactivity_ratios.py  2_Fit_instantaneous_copo_data_v1.py  2_Fit_reactivity_ratios.py  3_Fit_copo_data_v2.py
