[tool.poetry]
name = "pkweb"
version = "0.1.0"
description = ""
authors = ["HugoMVale <57530119+HugoMVale@users.noreply.github.com>"]
license = "MIT"
# readme = "README.md"
packages = [{ include = "src" }]
keywords = ["polymer", "polymerization", "kinetics", "reaction"]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.33.0"
numpy = "^1.26.4"
polykin = "0.5.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
